# daemail

./: .gitignore  CHANGELOG.md  CUSTOM.md  README.md  README.rst  TODO.md  daemail.py  pyproject.toml  setup.cfg  setup.py  tox.ini
daemail/: __init__.py  __main__.py  errors.py  mailer.py  message.py  reporter.py  runner.py  senders.py  util.py
src/daemail/: __init__.py  __main__.py  message.py  reporter.py  runner.py  senders.py  util.py
test/: test_config.py  test_daemail.py  test_lib_emailmatcher.py  test_mail_quote.py  test_message.py  test_reporter.py  test_runner.py  test_show_argv.py  test_util.py
