[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daemail"
dynamic = ["version"]
description = "Daemonize a command and e-mail the results"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "daemail@varonathe.org" }
]

keywords = [
    "daemon",
    "email",
    "e-mail",
    "mail",
    "smtp",
    "background",
    "output",
    "notifications",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "attrs         >= 18.1",
    "click         >= 7.0",
    "eletter       ~= 0.4",
    "mailbits      ~= 0.2",
    "morecontext   >= 0.4.1",
    "outgoing      ~= 0.2",
    "python-daemon >= 2.0, < 4.0",
]

[project.scripts]
daemail = "daemail.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/daemail"
"Bug Tracker" = "https://github.com/jwodder/daemail/issues"

[tool.hatch.version]
path = "src/daemail/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "daemon.*"
ignore_missing_imports = true
