[aliases]
make=sdist bdist_wheel

[metadata]
name = daemail
version = attr:daemail.__version__
description = Daemonize a command and e-mail the results
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = daemail@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/daemail

keywords =
    daemon
    email
    e-mail
    mail
    smtp
    background
    output
    notifications

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Topic :: Utilities

project_urls =
    Source Code = https://github.com/jwodder/daemail
    Bug Tracker = https://github.com/jwodder/daemail/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    click         ~= 6.5
    python-daemon == 2.*

[options.entry_points]
console_scripts =
    daemail = daemail.__main__:main
