[metadata]
name = daemail
version = attr:daemail.__version__
description = Daemonize a command and e-mail the results
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = daemail@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/daemail

keywords =
    daemon
    email
    e-mail
    mail
    smtp
    background
    output
    notifications

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Topic :: Utilities
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/daemail
    Bug Tracker = https://github.com/jwodder/daemail/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    attrs         >= 18.1
    click         >= 7.0
    eletter       ~= 0.4
    mailbits      ~= 0.2
    morecontext   >= 0.4.1
    outgoing      ~= 0.2
    python-daemon == 2.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    daemail = daemail.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
